--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,12 @@ android {
 //    }
     buildFeatures {
         compose true
+        viewBinding true
     }
+    androidResources {
+        noCompress 'tflite'
+    }
+
     composeOptions {
         kotlinCompilerExtensionVersion '1.4.7'
     }
@@ -67,8 +72,11 @@ android {
 dependencies {
 
     def nav_version = "2.6.0"
-
     def room_version = "2.5.2"
+
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation("androidx.navigation:navigation-compose:$nav_version")
     implementation("androidx.compose.material:material:1.4.3")
     implementation 'androidx.core:core-ktx:1.10.1'
@@ -87,6 +95,10 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
+    //Compose permissions
+
+    implementation "com.google.accompanist:accompanist-permissions:0.30.1"
+
     //Firebase Auth
     implementation platform('com.google.firebase:firebase-bom:31.0.0')
     implementation 'com.google.firebase:firebase-auth-ktx'
@@ -102,4 +114,7 @@ dependencies {
     implementation("androidx.room:room-ktx:$room_version")
     annotationProcessor("androidx.room:room-compiler:$room_version")
     kapt("androidx.room:room-compiler:$room_version")
+
+    //TensorFlow
+    implementation 'org.tensorflow:tensorflow-lite:2.13.0'
 }
