--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id("com.google.gms.google-services")
     id('kotlin-kapt')
+    id 'androidx.navigation.safeargs.kotlin'
 }
 
 android {
@@ -54,6 +55,9 @@ android {
     buildFeatures {
         compose true
         viewBinding true
+    }
+    dataBinding {
+        enabled = true
     }
     androidResources {
         noCompress 'tflite'
@@ -116,5 +120,33 @@ dependencies {
     kapt("androidx.room:room-compiler:$room_version")
 
     //TensorFlow
-    implementation 'org.tensorflow:tensorflow-lite:2.13.0'
+    //implementation 'org.tensorflow:tensorflow-lite:2.13.0'
+
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+
+    // CameraX core library
+    def camerax_version = '1.3.0-beta01'
+    implementation "androidx.camera:camera-core:$camerax_version"
+
+    // CameraX Camera2 extensions
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+
+    // CameraX Lifecycle library
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+
+    // CameraX View class
+    implementation "androidx.camera:camera-view:$camerax_version"
+
+    //WindowManager
+    implementation 'androidx.window:window:1.1.0'
+
+    implementation 'org.tensorflow:tensorflow-lite-task-vision:0.4.0'
+    // Import the GPU delegate plugin Library for GPU inference
+    implementation 'org.tensorflow:tensorflow-lite-gpu-delegate-plugin:0.4.0'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:2.9.0'
+
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 }
