--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="it.thebertozz.android.housekeeping"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -29,10 +29,12 @@
             </intent-filter>
         </activity>
 
-
         <activity android:name=".objectdetection.TensorFlowActivity"
             android:screenOrientation="portrait"
-            />
+            android:clearTaskOnLaunch="true"
+            android:theme="@style/AppTheme"
+            android:exported="true"/>
+
     </application>
 
 </manifest>
