--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,13 +45,6 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
-//    compileOptions {
-//        sourceCompatibility JavaVersion.VERSION_1_8
-//        targetCompatibility JavaVersion.VERSION_1_8
-//    }
-//    kotlinOptions {
-//        jvmTarget = '1.8'
-//    }
     buildFeatures {
         compose true
         viewBinding true
@@ -78,29 +71,26 @@ dependencies {
     def nav_version = "2.6.0"
     def room_version = "2.5.2"
 
+    //Android X Standard
+
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation("androidx.navigation:navigation-compose:$nav_version")
-    implementation("androidx.compose.material:material:1.4.3")
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.2'
+
+    //Jetpack Compose
+
     implementation platform('androidx.compose:compose-bom:2022.10.00')
+    implementation 'androidx.activity:activity-compose:1.7.2'
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    implementation("androidx.navigation:navigation-compose:$nav_version")
+    implementation("androidx.compose.material:material:1.4.3")
 
-    //Compose permissions
+    //Permessi sperimentali per compose
 
     implementation "com.google.accompanist:accompanist-permissions:0.30.1"
 
@@ -111,43 +101,42 @@ dependencies {
     //View model lifecycle
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
 
-    //Compose permissions
-    implementation("com.google.accompanist:accompanist-permissions:0.30.1")
-
     //Android Room
     implementation("androidx.room:room-runtime:$room_version")
     implementation("androidx.room:room-ktx:$room_version")
     annotationProcessor("androidx.room:room-compiler:$room_version")
     kapt("androidx.room:room-compiler:$room_version")
 
-    //TensorFlow
-    //implementation 'org.tensorflow:tensorflow-lite:2.13.0'
-
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-
-    // CameraX core library
+    //Libreria CameraX core
     def camerax_version = '1.3.0-beta01'
     implementation "androidx.camera:camera-core:$camerax_version"
 
-    // CameraX Camera2 extensions
+    //Estensioni CameraX Camera2
     implementation "androidx.camera:camera-camera2:$camerax_version"
 
-    // CameraX Lifecycle library
+    //Libreria CameraX Lifecycle
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
 
-    // CameraX View class
+    //Classe CameraX View
     implementation "androidx.camera:camera-view:$camerax_version"
 
-    //WindowManager
-    implementation 'androidx.window:window:1.1.0'
-
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.4.0'
-    // Import the GPU delegate plugin Library for GPU inference
-    implementation 'org.tensorflow:tensorflow-lite-gpu-delegate-plugin:0.4.0'
-    implementation 'org.tensorflow:tensorflow-lite-gpu:2.9.0'
+
+    //Libreria Kotlin navigation
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    //Test e debug
+
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
+    debugImplementation 'androidx.compose.ui:ui-tooling'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest'
 }
